--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -6,5 +6,5 @@ html(lang="ko")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Wetube 
   body 
-    h1 Welcome to wetube 
+    h1 Edit
   include partials/footer
