--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,10 +1,7 @@
-doctype html
-html(lang="ko")
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Wetube 
-  body 
-    h1 Edit
-  include partials/footer
+extends base
+
+block head
+  title Edit | Wetube
+
+block content
+  h1 edit!
