--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -3,6 +3,4 @@ extends base
 
 
 block content
-  h1 Home!
-  input(placeholder="Whats your name")
-  button send
+   h2 Welcome here you will see the trending videos
