--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,3 +4,8 @@ extends base
 
 block content
    h2 Welcome here you will see the trending videos
+   ul
+    each video in videos
+      li=video 
+    else 
+      li Sorry noting found.
