--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,11 +1,12 @@
 extends base
-
+include mixins/video
 
 
 block content
    h2 Welcome here you will see the trending videos
-   ul
     each video in videos
-      li=video 
+      +video(video)
     else 
       li Sorry noting found.
+
+     
