--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,6 +1,7 @@
 mixin video(info)
   div
-    h4=info.title 
+    h4
+      a(href=`/videos/${info.id}`)=info.title 
     ul 
       li #{info.rating}/5
       li #{info.comments} comments.
