--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,6 +1,5 @@
 extends base
 
-
-
 block content
-  h1 Watch!
+  h3 #{video.views} #{video.views === 1 ? "view" : "views"}
+  a(href=`${video.id}/edit`) Edit Video &rarr;
