--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -2,4 +2,7 @@ extends base
 
 
 block content
-  h1 edit!
+  h4 Change Title of video
+  form(method="POST")
+    input(name="title",placeholder="Video Title",value=video.title,required)
+    input(value="Save", type="submit")
