--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -2,5 +2,5 @@ extends base
 
 block content
   form(method="POST")
-    input(placeholder="Title", required, type="text")
+    input(placeholder="Title", required, type="text", name="title")
     input(type="submit", value="Upload Video")
