--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,9 +1,6 @@
-mixin video(info)
+mixin video(video)
   div
     h4
-      a(href=`/videos/${info.id}`)=info.title 
-    ul 
-      li #{info.rating}/5
-      li #{info.comments} comments.
-      li Posted #{info.createdAt}.
-      li #{info.views} views.
+      a(href=`/videos/${video.id}`)=video.title 
+    p=video.description
+    small=video.createdAt
