--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -2,7 +2,7 @@ extends base
 
 
 block content
-  h4 Change Title of video
+  h4 Update video
   form(method="POST")
     input(placeholder="Video Title",value=video.title,required,name="title")
     input(placeholder="Description",value=video.description, required, type="text", name="description", minlength=20)
