--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -3,4 +3,7 @@ mixin video(video)
     h4
       a(href=`/videos/${video.id}`)=video.title 
     p=video.description
+    ul 
+      each hashtag in video.hashtags
+        li=hashtag
     small=video.createdAt
