--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -17,6 +17,8 @@ html(lang="ko")
             a(href="/") Home
           li 
             a(href="/search") Search
+          li 
+            a(href="/join") Join
     main 
       block content
   include partials/footer
