--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -5,20 +5,28 @@ html(lang="ko")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet", href="https://unpkg.com/mvp.css")
-    title #{pageTitle} | Wetube
+    title #{pageTitle} | #{siteName}
   body 
     header     
       h1=pageTitle
       nav 
         ul 
           li 
-            a(href="/videos/upload") Upload Video
-          li 
             a(href="/") Home
+          if loggedIn 
+            li 
+              a(href="/logout") Log Out
+            li 
+              a(href="/my-profile") #{loggedInUser.name} profile. 
+          else  
+            li 
+              a(href="/join") Join
+            li 
+              a(href="/login") Login
           li 
             a(href="/search") Search
           li 
-            a(href="/join") Join
+            a(href="/videos/upload") Upload Video
     main 
       block content
   include partials/footer
