--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,7 +8,7 @@ block content
         input(placeholder="Password", name="password" , type="password", required)
         input(type="submit", value="Login")
         br
-        a(href="https://github.com/login/oauth/authorize?client_id=d50605d11b813ec0f3f3&allow_signup=false") Continue with Github &rarr;
+        a(href="/users/github/start") Continue with Github &rarr;
     hr
     div 
         span Don't have an account? 
