--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -15,9 +15,9 @@ html(lang="ko")
             a(href="/") Home
           if loggedIn 
             li 
-              a(href="/users/logout") Log Out
+              a(href="/users/edit") Edit Profile
             li 
-              a(href="/my-profile") #{loggedInUser.name} profile. 
+              a(href="/users/logout") Log Out
           else  
             li 
               a(href="/join") Join
