--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -1,7 +1,9 @@
 extends base
 
 block content 
-    from(method="POST")
+    from(method="POST", enctype="multipart/form-data")
+    label(for="avatar") Avatar 
+        input(type="file", id="avatar", name="avatar", accept="image/*")
         input(placeholder="Name", name="name" , type="text", required, value=loggedInUser.name)
         input(placeholder="Email", name="email" , type="email", required, value=loggedInUser.email)
         input(placeholder="Username", name="username" , type="text", required, value=loggedInUser.username)
@@ -10,3 +12,4 @@ block content
         if !loggedInUser.socialOnly
             hr
             a(href="change-password") Change-Password &rarr;
+            
