--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -1,8 +1,9 @@
 extends base
 
 block content 
-    from(method="POST", enctype="multipart/form-data")
-    label(for="avatar") Avatar 
+    img(src="/" + loggedInUser.avatarUrl, width="100", height="100")
+    form(method="POST", enctype="multipart/form-data")
+        label(for="avatar") Avatar 
         input(type="file", id="avatar", name="avatar", accept="image/*")
         input(placeholder="Name", name="name" , type="text", required, value=loggedInUser.name)
         input(placeholder="Email", name="email" , type="email", required, value=loggedInUser.email)
@@ -13,3 +14,4 @@ block content
             hr
             a(href="change-password") Change-Password &rarr;
             
+
