--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -17,6 +17,8 @@ html(lang="ko")
             li 
               a(href="/videos/upload") Upload Video
             li 
+              a(href=`/users/${loggedInUser._id}`) My Profile
+            li 
               a(href="/users/edit") Edit Profile
             li 
               a(href="/users/logout") Log Out
