--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -1,8 +1,8 @@
 extends ../base
-include mixins/video
+include ../mixins/video
 
 block content 
-    each video in videos
+    each video in user.videos
       +video(video)
     else 
       li Sorry noting found.
