--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -5,6 +5,7 @@ html(lang="ko")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+    link(rel="stylesheet", href="/static/css/styles.css")
     title #{pageTitle} | #{siteName}
   body 
     header     
