--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,9 +4,9 @@ include mixins/video
 
 block content
    
-    each video in videos
-      +video(video)
-    else 
-      li Sorry noting found.
-
+    div.video-grid
+        each video in videos
+            +video(video)
+        else
+            span.empty__message No videos found 
      
