--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,9 +1,8 @@
 mixin video(video)
-  div
-    h4
-      a(href=`/videos/${video.id}`)=video.title 
-    p=video.description
-    ul 
-      each hashtag in video.hashtags
-        li=hashtag
-    small=video.createdAt
+  a(href=`/videos/${video.id}`).video-mixin
+        div.video-mixin__thumb
+        div.video-mixin__data
+            span.video-mixin__title=video.title
+            div.video-mixin__meta
+                span #{video.owner.name} • 
+                span #{video.meta.views} 회 
