--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -10,6 +10,8 @@ block content
       span#currenTime 00:00
       span  / 
       span#totalTime 00:00
+    div 
+      input(type="range",step="1", value=0, min="0")#timeline
   //-
     div
       p=video.description
