--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -3,7 +3,7 @@ extends base
 block content
   div#videoContainer
     video(src="/" + video.fileUrl, controls) 
-    div 
+    div#videoControls
       button#play Play 
       button#mute Mute 
       input(type="range",step="0.01", value=0.5, min="0", max="1")#volume
