--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,4 +1,6 @@
 doctype html
+include mixins/message
+
 html(lang="ko")
   head
     meta(charset="UTF-8")
@@ -8,6 +10,12 @@ html(lang="ko")
     link(rel="stylesheet", href="/static/css/styles.css")
     title #{pageTitle} | #{siteName}
   body 
+    if messages.error
+      +message("error", messages.error) 
+    if messages.info
+      +message("info", messages.info)
+    if messages.success 
+      +message("success", messages.success) 
     include partials/header
     main 
       block content
