--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,9 +1,9 @@
 extends base
 
 block content
-  div#videoContainer(data-Id=video._id)
-    video(src="/" + video.fileUrl, controls) 
-    div#videoControls.videoControls
+    div#videoContainer(data-Id=video._id)
+      video(src="/" + video.fileUrl, controls) 
+      div#videoControls.videoControls
         div.videoControls__play
           span#play.videoControls__playBtn
             i.fas.fa-play
@@ -19,17 +19,20 @@ block content
         div
           span#fullScreen
             i.fas.fa-expand
-    //-
-      div
-        p=video.description
-        small=video.createdAt
-      div 
-        small Uploaded by 
-          a(href=`/users/${video.owner._id}`)=video.owner.name
-      if String(video.owner._id) === String(loggedInUser._id) 
-        a(href=`${video.id}/edit`) Edit Video &rarr;
-        br
-        a(href=`${video.id}/delete`) Delete Video &rarr;
-
+    div.video__data
+        p.video__title=video.title
+        small.video__owner Uploaded by 
+            a(href=`/users/${video.owner._id}`)=video.owner.name
+        small.video__createdAt=new Date(video.createdAt).toLocaleDateString("ko-kr", {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'})
+        if String(video.owner._id) === String(loggedInUser._id)
+            a(href=`${video.id}/edit`) Edit Video &rarr;
+            br
+            a(href=`${video.id}/delete`) Delete Video &rarr;
+  if loggedIn
+    div.video__comments 
+      form.video__comment-form#commentForm
+        textarea(cols="30", rows="10", placeholder="Write a nice comment...")
+        button Add Comment
 block scripts 
   script(src="/static/js/videoPlayer.js")
+  script(src="/static/js/commentSection.js")
