--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,25 +1,24 @@
 extends base
-
 block content
-    div#videoContainer(data-Id=video._id)
-      video(src="/" + video.fileUrl, controls) 
-      div#videoControls.videoControls
-        div.videoControls__play
-          span#play.videoControls__playBtn
-            i.fas.fa-play
-          div.videoControls__time
-            span#currenTime 00:00
-            span  / 
-            span#totalTime 00:00
-        input(type="range",step="1", value="0", min="0")#timeline.videoControls__timeline
-        div.videoControls__volume
-          input(type="range",step="0.1", value=0.5, min="0", max="1")#volume
-          span#mute
-            i.fas.fa-volume-up
-        div
-          span#fullScreen
-            i.fas.fa-expand
-      div.video__data
+    div#videoContainer(data-id=video._id)
+        video(src="/" + video.fileUrl)
+        div#videoControls.videoControls
+            div.videoControls__play
+                span#play.videoControls__playBtn
+                    i.fas.fa-play
+                div.videoControls__time
+                    span#currenTime 00:00
+                    span  / 
+                    span#totalTime 00:00
+            input(type="range",step="1", value="0", min="0")#timeline.videoControls__timeline
+            div.videoControls__volume
+                input(type="range",step="0.1", value=0.5, min="0", max="1")#volume
+                span#mute
+                    i.fas.fa-volume-up
+            div
+                span#fullScreen
+                    i.fas.fa-expand
+    div.video__data
         p.video__title=video.title
         small.video__owner Uploaded by 
             a(href=`/users/${video.owner._id}`)=video.owner.name
@@ -29,11 +28,17 @@ block content
             br
             a(href=`${video.id}/delete`) Delete Video &rarr;
     if loggedIn
-      div.video__comments 
-        form.video__comment-form#commentForm
-          textarea(cols="30", rows="10", placeholder="Write a nice comment...")
-          button Add Comment
-block scripts 
+        div.video__add-comments
+            form.video__comment-form#commentForm
+                textarea(cols="30", rows="10", placeholder="Write a nice commment...")
+                button Add Comment
+    div.video__comments
+        ul
+            each comment in video.comments.reverse()
+                li.video__comment
+                    i.fas.fa-comment
+                    |  #{comment.text}
+block scripts
     script(src="/static/js/videoPlayer.js")
     if loggedIn
-        script(src="/static/js/commentSection.js")
+        script(src="/static/js/commentSection.js") 
